seek ui, selectable sound, playground, fadein/out

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="popup.css">
 </head>
 
@@ -22,12 +24,12 @@
 
         <div class="menu-item" id="play-preview">
             <span>設定音の再生</span>
-            <button class="icon-btn">🔊</button>
+            <button class="icon-btn"><span class="material-symbols-outlined">brand_awareness</span></button>
         </div>
 
         <div class="menu-item" id="open-settings">
             <span>詳細設定</span>
-            <span class="arrow">→</span>
+            <span class="material-symbols-outlined">settings</span>
         </div>
     </div>
     <script src="popup.js"></script>
