--- a/options/options.html
+++ b/options/options.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InterrupCat Settings</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="options.css">
     <script src="../libs/wavesurfer.min.js"></script>
     <script src="../libs/regions.min.js"></script>
@@ -37,15 +39,36 @@
                         (長さ: <span id="duration">0.00</span>s)
                     </div>
 
-                    <div class="volume-control" style="margin-top: 16px;">
-                        <label for="volume-slider" style="font-size: 14px; color: var(--x-gray);">音量調整:</label>
-                        <input type="range" id="volume-slider" min="0" max="3" step="0.1" value="1.0"
-                            style="width: 100%; accent-color: var(--x-blue);">
-                    </div>
+                    <div class="controls-container">
+                        <!-- 上段: 再生停止ボタン & 音量 -->
+                        <div class="control-row">
+                            <button id="play-btn" class="btn btn-outline" style="flex: 0 0 auto;">
+                                <span class="material-symbols-outlined"
+                                    style="margin-right: 8px;">brand_awareness</span>
+                                再生 / 停止
+                            </button>
+                            <div class="control-group" style="flex: 1;">
+                                <label>音量: <span id="volume-label">100%</span></label>
+                                <input type="range" id="volume-slider" min="0" max="3" step="0.1" value="1.0">
+                            </div>
+                        </div>
 
-                    <div class="controls">
-                        <button id="play-btn" class="btn btn-outline">▶ 再生 / 停止</button>
-                        <button id="save-btn" class="btn btn-primary">リストに追加して設定</button>
+                        <!-- 中段: フェードイン & フェードアウト -->
+                        <div class="control-row">
+                            <div class="control-group" style="flex: 1;">
+                                <label>フェードイン: <span id="fade-in-label">0.1</span>s</label>
+                                <input type="range" id="fade-in-slider" min="0" max="1.0" step="0.1" value="0.1">
+                            </div>
+                            <div class="control-group" style="flex: 1;">
+                                <label>フェードアウト: <span id="fade-out-label">0.1</span>s</label>
+                                <input type="range" id="fade-out-slider" min="0" max="1.0" step="0.1" value="0.1">
+                            </div>
+                        </div>
+
+                        <!-- 下段: 保存ボタン -->
+                        <div class="control-row" style="margin-top: 8px;">
+                            <button id="save-btn" class="btn-save-secondary" style="width: 100%;">選択した音を追加</button>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -58,29 +81,36 @@
                 </div>
             </section>
 
-            <section class="section">
+            <!-- Trigger Settings -->
+            <section class="card">
                 <h2>再生トリガー設定</h2>
-                <p style="color: var(--x-gray); margin-bottom: 12px;">再生のきっかけになるキーや単語を設定します。</p>
-
-                <div class="trigger-config">
-                    <h3>キー入力 (英数字1文字)</h3>
-                    <div id="key-trigger-list" class="trigger-list">
-                        <!-- Dynamic list -->
-                    </div>
-                    <div class="add-trigger-row">
-                        <input type="text" id="new-key-input" maxlength="1" placeholder="例: c">
-                        <button id="add-key-btn" class="btn-add">追加</button>
-                    </div>
-
-                    <h3 style="margin-top: 24px;">IME 変換単語</h3>
-                    <div id="word-trigger-list" class="trigger-list">
-                        <!-- Dynamic list -->
-                    </div>
-                    <div class="add-trigger-row">
-                        <input type="text" id="new-word-input" placeholder="例: かわいい">
-                        <button id="add-word-btn" class="btn-add">追加</button>
+                <div class="trigger-group">
+                    <label>特定のキー (英数字1文字ずつ):</label>
+                    <div id="key-trigger-list" class="trigger-list"></div>
+                    <div class="add-trigger">
+                        <input type="text" id="new-key-input" placeholder="a">
+                        <button id="add-key-btn" class="btn btn-outline">追加</button>
                     </div>
                 </div>
+
+                <div class="trigger-group">
+                    <label>変換確定時の単語:</label>
+                    <div id="word-trigger-list" class="trigger-list"></div>
+                    <div class="add-trigger">
+                        <input type="text" id="new-word-input" placeholder="かわいい">
+                        <button id="add-word-btn" class="btn btn-outline">追加</button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Playground Section -->
+            <section class="card playground-section">
+                <h2>Playground</h2>
+                <p style="font-size: 13px; color: var(--x-gray); margin-bottom: 12px;">
+                    設定した音やトリガーをその場でテストできます。
+                </p>
+                <input type="text" id="playground-input" placeholder="ここに入力してテスト..."
+                    style="width: 100%; padding: 12px; border: 1px solid var(--x-border); border-radius: 8px; font-size: 16px; outline: none;">
             </section>
         </main>
     </div>
