--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,8 +14,8 @@
             <span class="title">InterrupCat</span>
         </div>
 
-        <div class="menu-item" id="toggle-power">
-            <span>機能の有効化</span>
+        <div class="menu-item" id="toggle-power-item">
+            <span class="label">機能の有効化</span>
             <label class="switch">
                 <input type="checkbox" id="power-switch" checked>
                 <span class="slider"></span>
@@ -23,13 +23,15 @@
         </div>
 
         <div class="menu-item" id="play-preview">
-            <span>設定音の再生</span>
+            <span class="label">設定音の再生</span>
             <button class="icon-btn"><span class="material-symbols-outlined">brand_awareness</span></button>
         </div>
 
-        <div class="menu-item" id="open-settings">
-            <span>詳細設定</span>
-            <span class="material-symbols-outlined">settings</span>
+        <div class="menu-item" id="open-settings-item">
+            <span class="label">詳細設定</span>
+            <div class="icon">
+                <span class="material-symbols-outlined">settings</span>
+            </div>
         </div>
     </div>
     <script src="popup.js"></script>
